--- a/src/scss/07_navigation.scss
+++ b/src/scss/07_navigation.scss
@@ -83,6 +83,10 @@
 }
 ////////////////////////////////////////////////////////////////// MOBILE MENU 
 .mobile-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -98,5 +102,42 @@
     visibility: visible;
     transform: translateY(0);
     transition: transform $time-mobile-menu ease-in, visibility 0s;
+  }
+
+  &__section {
+    width: 100%;
+    display: grid;
+    fill: $cold-blue;
+    padding: 0 $layout-xs-sm-padding;
+    grid-template-columns: $size-main-buttons 1fr $size-main-buttons;
+    cursor: pointer;
+
+    &::before { // needed to make heading in the center
+      content: "";
+    }
+
+    &:hover {
+      fill: $cold-light-blue;
+      background-color: lighten($cold-darkest-blue, 3%);
+    }
+  }
+
+  &__title {
+    color: $cold-light-blue;
+    margin: 15px 0;
+    font-size: 1.5rem;
+    font-weight: normal;
+    text-align: center;
+  }
+
+  &__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    transition: transform 0.4s;
+
+    &--active {
+      transform: rotate(135deg);
+    }
   }
 }
