--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -8,15 +8,13 @@
   justify-content: flex-end;
   align-items: center;
   padding-top: $layout-xs-header-height;
-  //transition: transform 0.3s ease-in, visibility 0s 0.3s;
-  //overflow-x: hidden;
-  //overflow-y: auto;
 
   &__weeks {
+    background-color: $cold-dark-blue;
     position: relative;
     width: 100%;
-    height: 0;
     overflow: hidden;
+    transition: height 0.5s ease-in-out;
   }
 }
 ///////////////////////////////////////////////////////////////////////// WEEK 
@@ -25,7 +23,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  top: 0;
+  top: 20px;
   height: 100%;
   visibility: hidden;
   transition: visibility 0s $time-week-slide;
