chore: set temporary description for stats and settings sections

--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -35,8 +35,9 @@ $time-hover-effect: 0.2s;
 $time-edit-mode: 0.2s;
 $time-edit-buttons: 0.5s;
 $time-week-slide: 0.5s;
-
-$time-mobile-menu: 0.4s;
+// MOBILE MENU
+$time-mobmenu-expand: 0.5s;
+$time-mobmenu-main: 0.4s;
 
 $edit-group-cols: 4;
 $edit-group-col-gap: 5px;
