--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -13,8 +13,9 @@
     background-color: $cold-dark-blue;
     position: relative;
     width: 100%;
+    height: 0;
     overflow: hidden;
-    transition: height 0.5s ease-in-out;
+    transition: height $time-mobmenu-expand ease-in-out;
   }
 }
 ///////////////////////////////////////////////////////////////////////// WEEK 
