--- a/src/scss/10_stats.scss
+++ b/src/scss/10_stats.scss
@@ -1,3 +1,20 @@
 .stats {
   width: 100%;
+
+  &__container {
+    background-color: $cold-dark-blue;
+    height: 0;
+    overflow: hidden;
+    transition: height $time-mobmenu-expand ease-in-out;
+
+    &--active {
+      height: 60px;
+    }
+  }
+
+  &__text {
+    margin: 0;
+    padding: 20px;
+    text-align: center;
+  }
 }
