--- a/css/main.css
+++ b/css/main.css
@@ -422,14 +422,190 @@ html {
           box-sizing: inherit; }
 
 body {
+  color: #d3f3ff;
   font-family: "Nunito", Arial, sans-serif;
-  font-weight: medium;
-  color: #d3f3ff; }
+  font-weight: medium; }
 
 .button {
   background: none;
   border: none;
-  cursor: pointer; }
+  cursor: pointer;
+  padding: 0; }
+
+.logo {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 150px;
+  height: 100%; }
+  .logo__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative; }
+  .logo__svg {
+    fill: #4a8eb2;
+    width: 100%;
+    height: 100%; }
+    .logo__svg--color {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      fill: #d3f3ff; }
+
+.burger-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: #4a8eb2;
+  width: 30px;
+  -webkit-transition: fill 0.2s, -webkit-transform 0.2s;
+  transition: fill 0.2s, -webkit-transform 0.2s;
+  -o-transition: fill 0.2s, transform 0.2s;
+  transition: fill 0.2s, transform 0.2s;
+  transition: fill 0.2s, transform 0.2s, -webkit-transform 0.2s; }
+  .burger-button--active {
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg); }
+  .burger-button:hover {
+    fill: #d3f3ff; }
+  .burger-button__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none; }
+
+.navigation {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1; }
+  .navigation__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+  .navigation__button {
+    display: none;
+    color: #d3f3ff;
+    padding: 0.5rem;
+    border: 2px solid transparent; }
+    .navigation__button:hover {
+      border-bottom-color: #d3f3ff; }
+  @media only screen and (min-width: 768px) {
+    .navigation__button {
+      display: block; } }
+
+.mobile-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  background-color: #112f44;
+  visibility: hidden;
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: visibility 0s 0.4s, -webkit-transform 0.4s ease-in;
+  transition: visibility 0s 0.4s, -webkit-transform 0.4s ease-in;
+  -o-transition: transform 0.4s ease-in, visibility 0s 0.4s;
+  transition: transform 0.4s ease-in, visibility 0s 0.4s;
+  transition: transform 0.4s ease-in, visibility 0s 0.4s, -webkit-transform 0.4s ease-in;
+  overflow: auto;
+  z-index: 1; }
+  .mobile-menu--visible {
+    visibility: visible;
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: visibility 0s, -webkit-transform 0.4s ease-in;
+    transition: visibility 0s, -webkit-transform 0.4s ease-in;
+    -o-transition: transform 0.4s ease-in, visibility 0s;
+    transition: transform 0.4s ease-in, visibility 0s;
+    transition: transform 0.4s ease-in, visibility 0s, -webkit-transform 0.4s ease-in; }
+  .mobile-menu__section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    fill: #4a8eb2;
+    padding: 0 1rem;
+    -ms-grid-columns: 1fr 40px;
+    grid-template-columns: 1fr 40px;
+    cursor: pointer; }
+    .mobile-menu__section::before {
+      content: "";
+      width: 30px; }
+    .mobile-menu__section:hover {
+      fill: #d3f3ff;
+      background-color: #143750; }
+  .mobile-menu__title {
+    color: #d3f3ff;
+    margin: 15px 0;
+    font-size: 1.5rem;
+    font-weight: normal;
+    text-align: center;
+    pointer-events: none;
+    width: 200px; }
+  .mobile-menu__svg {
+    width: 30px;
+    height: 30px;
+    pointer-events: none;
+    -webkit-transition: -webkit-transform 0.4s;
+    transition: -webkit-transform 0.4s;
+    -o-transition: transform 0.4s;
+    transition: transform 0.4s;
+    transition: transform 0.4s, -webkit-transform 0.4s; }
+    .mobile-menu__svg--active {
+      -webkit-transform: rotate(135deg);
+          -ms-transform: rotate(135deg);
+              transform: rotate(135deg); }
 
 .app {
   display: -webkit-box;
@@ -463,11 +639,10 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    height: 60px;
+    height: 64px;
     width: 100%;
-    z-index: 1;
-    background-color: #274c66;
-    padding: 0 1rem; }
+    padding: 0 1rem;
+    z-index: 2; }
   .app__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -513,58 +688,6 @@ body {
       .app__button--remove:hover {
         background-color: #4a8eb2; }
 
-.navigation {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
-  .navigation__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    list-style-type: none;
-    margin: 0;
-    padding: 0; }
-  .navigation__button {
-    color: #d3f3ff;
-    padding: 0.5rem;
-    border: 2px solid transparent; }
-    .navigation__button:hover {
-      border-bottom-color: #d3f3ff; }
-
-.logo {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
-  .logo__link {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    position: relative;
-    max-width: 120px; }
-  .logo__svg {
-    fill: #4a8eb2;
-    width: 100%;
-    height: 100%; }
-    .logo__svg--color {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      fill: #d3f3ff; }
-
 .glass {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -588,67 +711,49 @@ body {
     stroke-width: 10px; }
   .glass__counter {
     margin: 0;
+    color: #274c66;
     text-align: center;
-    font-size: 7rem;
+    font-size: 5rem;
+    font-weight: bold;
     position: absolute; }
 
 .archive {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   width: 100%;
-  background-color: #274c66;
   font-weight: 300;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  visibility: hidden;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  overflow: scrollY;
-  padding-top: 60px;
-  -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-          transform: translateY(-100%);
-  -webkit-transition: visibility 0s 0.3s, -webkit-transform 0.3s ease-in;
-  transition: visibility 0s 0.3s, -webkit-transform 0.3s ease-in;
-  -o-transition: transform 0.3s ease-in, visibility 0s 0.3s;
-  transition: transform 0.3s ease-in, visibility 0s 0.3s;
-  transition: transform 0.3s ease-in, visibility 0s 0.3s, -webkit-transform 0.3s ease-in; }
-  .archive--visible {
-    visibility: visible;
-    -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-            transform: translateY(0);
-    -webkit-transition: visibility 0s, -webkit-transform 0.3s ease-out;
-    transition: visibility 0s, -webkit-transform 0.3s ease-out;
-    -o-transition: transform 0.3s ease-out, visibility 0s;
-    transition: transform 0.3s ease-out, visibility 0s;
-    transition: transform 0.3s ease-out, visibility 0s, -webkit-transform 0.3s ease-out; }
-  .archive__heading {
-    margin: 20px 0;
-    font-size: 1.3rem;
-    font-weight: normal; }
+  padding-top: 64px; }
   .archive__weeks {
+    background-color: #274c66;
     position: relative;
     width: 100%;
-    height: 100%; }
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: height 0.5s ease-in-out;
+    -o-transition: height 0.5s ease-in-out;
+    transition: height 0.5s ease-in-out; }
 
 .week {
   position: absolute;
   bottom: 0;
   right: 0;
   left: 0;
-  top: 0;
+  top: 20px;
+  height: 100%;
   visibility: hidden;
   -webkit-transition: visibility 0s 0.5s;
   -o-transition: visibility 0s 0.5s;
@@ -692,8 +797,8 @@ body {
     background-color: #4a8eb2;
     border-radius: 5px;
     padding: 5px;
-    margin-bottom: 15px;
-    height: 40px; }
+    margin-bottom: 11px;
+    height: 50px; }
   .week__heading {
     margin: 0; }
   .week__button {
@@ -735,14 +840,25 @@ body {
       -ms-flex-align: center;
           align-items: center;
   padding: 5px;
-  position: relative; }
+  position: relative;
+  border-radius: 5px;
+  margin-bottom: 11px;
+  height: 50px; }
   .entry--last {
     -ms-grid-columns: 1fr (auto)[4];
     grid-template-columns: 1fr repeat(4, auto); }
   .entry--edit-mode {
     background-color: #112f44; }
   .entry:not(:last-child) {
-    border-bottom: 1px solid #4a8eb2; }
+    margin-bottom: 11px; }
+    .entry:not(:last-child)::after {
+      content: "";
+      position: absolute;
+      bottom: -6px;
+      left: 0;
+      width: 100%;
+      padding: 5px 0;
+      border-bottom: 1px solid #4a8eb2; }
   .entry__button {
     margin: 0;
     padding: 0.6rem 0.8rem;
@@ -892,6 +1008,9 @@ body {
     .indicator {
       width: 30px;
       height: 30px; } }
+  .indicator--new {
+    height: 100%;
+    width: 100%; }
   .indicator__svg {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -986,13 +1105,7 @@ body {
     border: 6px solid #d3f3ff;
     border-radius: 50%;
     width: 100%;
-    height: 100%;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1/3; }
+    height: 100%; }
   .new-entry__button {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1012,5 +1125,40 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none; }
+
+.stats {
+  width: 100%; }
+  .stats__container {
+    background-color: #274c66;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: height 0.5s ease-in-out;
+    -o-transition: height 0.5s ease-in-out;
+    transition: height 0.5s ease-in-out; }
+    .stats__container--active {
+      height: 60px; }
+  .stats__text {
+    margin: 0;
+    padding: 20px;
+    text-align: center; }
+
+.settings {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 100%; }
+  .settings__container {
+    background-color: #274c66;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: height 0.5s ease-in-out;
+    -o-transition: height 0.5s ease-in-out;
+    transition: height 0.5s ease-in-out; }
+    .settings__container--active {
+      height: 60px; }
+  .settings__text {
+    margin: 0;
+    padding: 20px;
+    text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
