--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -35,6 +35,7 @@ $time-hover-effect: 0.2s;
 $time-edit-mode: 0.2s;
 $time-edit-buttons: 0.5s;
 $time-week-slide: 0.5s;
+$time-week-entries: 0.6s;
 // MOBILE MENU
 $time-mobmenu-expand: 0.5s;
 $time-mobmenu-main: 0.4s;
