--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -86,6 +86,7 @@
     max-width: 30px;
     width: 100%;
     padding: 0;
+    transition: fill $time-hover-effect;
 
     &--visible {
       visibility: inherit;
@@ -118,9 +119,20 @@
     margin: 0;
   }
 }
+/*
+######## ##    ## ######## ########  ##    ##
+##       ###   ##    ##    ##     ##  ##  ##
+##       ####  ##    ##    ##     ##   ####
+######   ## ## ##    ##    ########     ##
+##       ##  ####    ##    ##   ##      ##
+##       ##   ###    ##    ##    ##     ##
+######## ##    ##    ##    ##     ##    ##
+*/
 //////////////////////////////////////////////////////////////////////// ENTRY 
 .entry {
   display: grid;
+  visibility: hidden;
+  opacity: 0;
   grid-template-columns: 1fr repeat(3, auto);
   grid-gap: 5px;
   align-items: center;
@@ -129,6 +141,16 @@
   border-radius: $br-items;
   margin-bottom: 11px;
   height: 50px;
+  transition:
+    background-color $time-edit-buttons,
+    opacity 0.5s,
+    visibility 0s 0.5s;
+
+  &--visible {
+    visibility: visible;
+    opacity: 1;
+    transition: background-color $time-edit-buttons, opacity 0.5s, visibility 0.5s;
+  }
 
   &--last {
     grid-template-columns: 1fr repeat(4, auto);
@@ -152,17 +174,6 @@
     }
   }
   
-  &__button {
-    margin: 0;
-    padding: 0.6rem 0.8rem;
-    color: $cold-light-blue;
-    border-radius: 5px;
-    
-    &:hover {
-      background-color: $cold-blue;
-    }
-  }
-  
   &__add {
     @include flex-center;
   }
@@ -174,7 +185,7 @@
     overflow: hidden;
     padding: 0;
     fill: $cold-light-blue;
-    transition: width $time-edit-buttons;
+    transition: width $time-edit-buttons, fill $time-hover-effect;
 
     &--hidden {
       width: 0;
@@ -182,6 +193,19 @@
     
     &:hover {
       fill: $warm-red;
+    }
+  }
+  
+  &__button {
+    margin: 0;
+    padding: 0.6rem 0.8rem;
+    font-weight: bold;
+    color: $cold-light-blue;
+    border-radius: 5px;
+    transition: background-color $time-hover-effect;
+    
+    &:hover {
+      background-color: $cold-blue;
     }
   }
 
@@ -192,6 +216,7 @@
   }
   
   &__header {
+    transition: color $time-edit-buttons;
   
     &--edit-mode {
       color: $cold-dark-blue;
@@ -228,6 +253,77 @@
     }
   }
 }
+/*
+##    ## ######## ##      ##    ######## ##    ## ######## ########  ##    ##
+###   ## ##       ##  ##  ##    ##       ###   ##    ##    ##     ##  ##  ##
+####  ## ##       ##  ##  ##    ##       ####  ##    ##    ##     ##   ####
+## ## ## ######   ##  ##  ##    ######   ## ## ##    ##    ########     ##
+##  #### ##       ##  ##  ##    ##       ##  ####    ##    ##   ##      ##
+##   ### ##       ##  ##  ##    ##       ##   ###    ##    ##    ##     ##
+##    ## ########  ###  ###     ######## ##    ##    ##    ##     ##    ##
+*/
+//////////////////////////////////////////////////////////////////// NEW ENTRY 
+.new-entry {
+  @include flex-center;
+  visibility: hidden;
+  grid-auto-rows: 100px;
+  background-color: rgba($color: $cold-darkest-blue, $alpha: 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+
+  &--visible {
+    visibility: visible;
+  }
+
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(2, $size-xs-archive-add-new);
+    grid-auto-rows: $size-xs-archive-add-new;
+    grid-gap: 1rem;
+  }
+
+  &__value {
+    @include flex-center;
+    font-size: 6rem;
+    font-weight: bold;
+    margin: 0;
+    color: $cold-light-blue;
+    border: 6px solid $cold-light-blue;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__button {
+    @include flex-center;
+    width: 100%;
+    height: 100%;
+    fill: $cold-blue;
+
+    &:hover {
+      fill: $cold-light-blue;
+    }
+  }
+
+  &__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+}
+/*
+######## ########  #### ######## ####  #######  ##    ##
+##       ##     ##  ##     ##     ##  ##     ## ###   ##
+##       ##     ##  ##     ##     ##  ##     ## ####  ##
+######   ##     ##  ##     ##     ##  ##     ## ## ## ##
+##       ##     ##  ##     ##     ##  ##     ## ##  ####
+##       ##     ##  ##     ##     ##  ##     ## ##   ###
+######## ########  ####    ##    ####  #######  ##    ##
+*/
 ///////////////////////////////////////////////////////////////// EDITION MODE 
 .edition {
   position: relative;
@@ -249,25 +345,35 @@
     padding: 0;
     width: $size-xs-archive-buttons;
     height: $size-xs-archive-buttons;
+    fill: $cold-light-blue;
     opacity: 0;
     visibility: hidden;
-    transition: opacity $time-edit-buttons, visibility 0s $time-edit-buttons;
+    transition:
+      opacity $time-edit-buttons,
+      visibility 0s $time-edit-buttons,
+      fill $time-hover-effect;
 
     &--visible {
       visibility: inherit;
       opacity: 1;
-      transition: opacity $time-edit-buttons, visibility 0s;
+      transition:
+        opacity $time-edit-buttons,
+        visibility 0s,
+        fill $time-hover-effect;
     }
 
     &--edit {
       position: absolute;
+    }
+
+    &:hover {
+      fill: $cold-blue;
     }
   }
 
   &__svg {
     width: 100%;
     height: 100%;
-    fill: $cold-light-blue;
     pointer-events: none;
   }
 
@@ -289,6 +395,15 @@
     }
   }
 }
+/*
+#### ##    ## ########  ####  ######     ###    ########  #######  ########
+ ##  ###   ## ##     ##  ##  ##    ##   ## ##      ##    ##     ## ##     ##
+ ##  ####  ## ##     ##  ##  ##        ##   ##     ##    ##     ## ##     ##
+ ##  ## ## ## ##     ##  ##  ##       ##     ##    ##    ##     ## ########
+ ##  ##  #### ##     ##  ##  ##       #########    ##    ##     ## ##   ##
+ ##  ##   ### ##     ##  ##  ##    ## ##     ##    ##    ##     ## ##    ##
+#### ##    ## ########  ####  ######  ##     ##    ##     #######  ##     ##
+*/
 /////////////////////////////////////////////////////////////////// INDICATORS 
 .indicator {
   @include flex-center;
@@ -335,60 +450,5 @@
       visibility: inherit;
       transform: translateX(0);
     }
-  }
-}
-//////////////////////////////////////////////////////////////////// NEW ENTRY 
-.new-entry {
-  @include flex-center;
-  visibility: hidden;
-  grid-auto-rows: 100px;
-  background-color: rgba($color: $cold-darkest-blue, $alpha: 0.8);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-
-  &--visible {
-    visibility: visible;
-  }
-
-  &__container {
-    display: grid;
-    grid-template-columns: repeat(2, $size-xs-archive-add-new);
-    grid-auto-rows: $size-xs-archive-add-new;
-    grid-gap: 1rem;
-  }
-
-  &__value {
-    @include flex-center;
-    font-size: 6rem;
-    font-weight: bold;
-    margin: 0;
-    color: $cold-light-blue;
-    border: 6px solid $cold-light-blue;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    grid-column: 1/3;
-    grid-row: 1/3;
-  }
-
-  &__button {
-    @include flex-center;
-    width: 100%;
-    height: 100%;
-    fill: $cold-blue;
-
-    &:hover {
-      fill: $cold-light-blue;
-    }
-  }
-
-  &__svg {
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
   }
 }
