--- a/src/scss/05_animations.scss
+++ b/src/scss/05_animations.scss
@@ -17,3 +17,8 @@
   0% { transform: translateX(0); }
   100% { transform: translateX(-100%); }
 }
+
+@keyframes fade {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
