--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -15,7 +15,7 @@
     width: 100%;
     height: 0;
     overflow: hidden;
-    transition: height $time-mobmenu-expand ease-in-out;
+    transition: height $time-mobmenu-expand;
   }
 }
 /*
@@ -139,15 +139,17 @@
   border-radius: $br-items;
   margin-bottom: 11px;
   height: 50px;
+  opacity: 0;
   transition:
     background-color $time-edit-buttons,
-    opacity 0.5s,
-    visibility 0s 0.5s;
+    opacity 0.5s;
 
   &--visible {
-    visibility: visible;
     opacity: 1;
-    transition: background-color $time-edit-buttons, opacity 0.5s, visibility 0.5s;
+  }
+
+  &--fadeIn {
+    animation: fade 0.5s;
   }
 
   &--last {
