--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -40,5 +40,7 @@ $time-week-entries: 0.6s;
 $time-mobmenu-expand: 0.7s;
 $time-mobmenu-main: 0.4s;
 
+$time-new-entry: 0.5s;
+
 $edit-group-cols: 4;
 $edit-group-col-gap: 5px;
