--- a/src/scss/08_landing.scss
+++ b/src/scss/08_landing.scss
@@ -6,7 +6,7 @@
   width: 100%;
   min-height: 100vh;
   background-color: $cold-dark-blue;
-  padding: 1rem;
+  padding: $layout-xs-header-height 0;
 
   &__header {
     @include flex-center;
@@ -16,22 +16,24 @@
     height: $layout-xs-header-height;
     width: 100%;
     padding: 0 $layout-xs-sm-padding;
-    z-index: 2;
+    z-index: 2;border: 1px solid #000;
   }
 
   &__container {
     @include flex-center;
+    flex-grow: 1;
     width: 60%;
     height: 100%;
     max-width: 1200px;
-    margin-top: 4rem;
     flex-direction: column;
+    border: 1px solid #000;
   }
 
   &__button {
     border-radius: 4px;
     padding: 12px;
     min-width: 200px;
+    margin-top: 48px;
     color: $cold-light-blue;
     font-size: 0.875rem;
     transition: box-shadow $time-hover-effect, background-color $time-hover-effect;
@@ -41,7 +43,6 @@
       font-weight: bold;
       background-color: $cold-blue;
       color: $cold-darkest-blue;
-      margin-bottom: 2rem;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       
 
@@ -65,9 +66,11 @@
   position: relative;
 
   &__svg {
+    display: flex;
+    flex-grow: 1;
     width: 100%;
-    max-height: 400px;
-    margin-bottom: 48px;
+    height: 100%;
+    //max-height: 400px;
   }
 
   &__fill {
