--- a/src/scss/09_archive.scss
+++ b/src/scss/09_archive.scss
@@ -266,43 +266,83 @@
 .new-entry {
   @include flex-center;
   visibility: hidden;
-  grid-auto-rows: 100px;
-  background-color: rgba($color: $cold-darkest-blue, $alpha: 0.8);
+  background-color: $cold-dark-blue;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  //bottom: 0;
+  height: 100%;
   z-index: 1;
+  padding: $layout-xs-sm-padding;
+  padding-top: $layout-xs-header-height;
+  opacity: 0;
+  transition: opacity $time-new-entry, visibility 0s $time-new-entry;
 
   &--visible {
     visibility: visible;
+    opacity: 1;
+    transition: opacity $time-new-entry, visibility 0s;
   }
 
   &__container {
     display: grid;
-    grid-template-columns: $size-xs-archive-add-new;
-    grid-auto-rows: $size-xs-archive-add-new;
+    width: 100%;
+    max-height: 100%;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(11, 1fr);
+    //grid-auto-rows: 60px;
+    justify-items: center;
+    align-items: center;
     grid-template-areas:
-      "date indicator"
-      "value value"
-      "value value"
-      "down up"
-      "cancel save";
-    grid-gap: 1rem;
+      /* "date . indicator"
+      "value value value"
+      "value value value"
+      "down . up"
+      "cancel . save"; */
+      ". . indicator indicator indicator"
+      ". . indicator indicator indicator"
+      ". . indicator indicator indicator"
+      "value value value value ."
+      "value value value value ."
+      "value value value value ."
+      "value value value value ."
+      "down down . up up"
+      "down down . up up"
+      "cancel cancel . save save"
+      "cancel cancel . save save";
+    grid-row-gap: 1rem;
+  }
+
+  &__display {
+    @include flex-center;
+    flex-direction: column;
+    grid-area: value;
+    border: 4px solid $cold-light-blue;
+    background-color: $cold-darkest-blue;
+    //margin: -10px 0;
+    border-radius: 50%;
+    color: $cold-blue;
+    box-shadow:
+      0 0 15px rgba($color: $cold-blue, $alpha: 0.5),
+      inset 0 0 30px rgba($color: $cold-blue, $alpha: 0.6);
+    width: 100%;
+    height: 100%;
   }
 
   &__value {
-    @include flex-center;
-    grid-area: value;
-    font-size: 6rem;
-    font-weight: bold;
     margin: 0;
-    color: $cold-light-blue;
-    border: 6px solid $cold-light-blue;
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    font-size: 4rem;
+    font-weight: bold;
+  }
+
+  &__day {
+    margin: 0;
+    text-transform: capitalize;
+  }
+
+  &__date {
+    margin: 0;
   }
 
   &__button {
