chore: restore app on yeoman webapp

--- a/app/styles/07_navigation.scss
+++ b/app/styles/07_navigation.scss
@@ -1,3 +1,6 @@
+@import 'variables.scss';
+@import 'mixins.scss';
+
 ///////////////////////////////////////////////////////////////////////// LOGO 
 .logo {
   flex-grow: 1;
