--- a/app/styles/08_landing.scss
+++ b/app/styles/08_landing.scss
@@ -1,3 +1,6 @@
+@import 'variables.scss';
+@import 'mixins.scss';
+
 /////////////////////////////////////////////////////////// MAIN APP INTERFACE 
 .app {
   @include flex-center;
