refactor: update main script file's comments

--- a/app/styles/archive.scss
+++ b/app/styles/archive.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
-////////////////////////////////////////////////////////////////////// ARCHIVE 
+//| ARCHIVE                                                                 |//
 .archive {
   flex-grow: 1;
   width: 100%;
@@ -30,7 +30,7 @@
 ##  ##  ## ##       ##       ##   ##
  ###  ###  ######## ######## ##    ##
 */
-///////////////////////////////////////////////////////////////////////// WEEK 
+//| WEEK                                                                    |//
 .week {
   position: absolute;
   bottom: 0;
@@ -131,7 +131,7 @@
 ##       ##   ###    ##    ##    ##     ##
 ######## ##    ##    ##    ##     ##    ##
 */
-//////////////////////////////////////////////////////////////////////// ENTRY 
+//| ENTRY                                                                   |//
 .entry {
   display: grid;
   grid-template-columns: 1fr repeat(3, auto);
@@ -265,7 +265,7 @@
 ##   ### ##       ##  ##  ##    ##       ##   ###    ##    ##    ##     ##
 ##    ## ########  ###  ###     ######## ##    ##    ##    ##     ##    ##
 */
-//////////////////////////////////////////////////////////////////// NEW ENTRY 
+//| NEW ENTRY                                                               |//
 .new-entry {
   @include flex-center;
   visibility: hidden;
@@ -380,7 +380,7 @@
 ##       ##     ##  ##     ##     ##  ##     ## ##   ###
 ######## ########  ####    ##    ####  #######  ##    ##
 */
-///////////////////////////////////////////////////////////////// EDITION MODE 
+//| EDITION MODE                                                            |//
 .edition {
   position: relative;
   display: grid;
@@ -460,7 +460,7 @@
  ##  ##   ### ##     ##  ##  ##    ## ##     ##    ##    ##     ## ##    ##
 #### ##    ## ########  ####  ######  ##     ##    ##     #######  ##     ##
 */
-/////////////////////////////////////////////////////////////////// INDICATORS 
+//| INDICATORS                                                              |//
 .indicator {
   @include flex-center;
   position: relative;
