--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'animations.scss';
 
 @import 'overall.scss';
+@import 'header.scss';
 @import 'navigation.scss';
 @import 'landing.scss';
 @import 'archive.scss';
