--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,4 +1,4 @@
-/////////////////////////////////////////////////////////////////////// COLORS 
+//| COLORS                                                                  |//
 $cold-darkest-blue: #112f44;
 $cold-dark-blue: #274c66;
 $cold-blue: #4a8eb2;
@@ -9,10 +9,16 @@ $warm-dark-orange: #ba6353;
 $warm-orange: #d68960;
 $warm-light-orange: #e2b673;
 $warm-yellow: #edcf84;
-
-/////////////////////////////////////////////////////////////////////// LAYOUT 
+//| LAYOUT                                                                  |//
 // HEADER
-$layout-xs-header-height: 64px;
+$logo-aspect-ratio: 512 / 135;
+
+$header-height-xs: 64px;
+$header-padding: 30px;
+$burgerBtn-size: 60px;
+
+
+
 
 $size-main-buttons: 30px;
 $size-xs-archive-buttons: 25px;
@@ -25,11 +31,10 @@ $layout-xs-sm-padding: 1rem;
 $media-sm: 360px;
 $media-md: 768px;
 $media-lg: 1024px;
-/////////////////////////////////////////////////////////////////// DECORATION 
+//| DECORATION                                                              |//
 $br-items: 5px;
 
-
-///////////////////////////////////////////////////////////////////////// TIME 
+//| TIME                                                                    |//
 
 $time-hover-effect: 0.2s;
 $time-edit-mode: 0.2s;
