--- a/app/styles/mixins.scss
+++ b/app/styles/mixins.scss
@@ -3,3 +3,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
