--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -15,7 +15,7 @@ $media-sm: 360px;
 $media-md: 768px;
 $media-lg: 1024px;
 //| LAYOUT                                                                  |//
-// HEADER
+//: LOGO                                                                    ://
 $logo-aspect-ratio: 512 / 135;
 
 $header-height-xs: 64px;
@@ -24,9 +24,12 @@ $header-padding-xs: 10px;
 $header-padding-md: 20px;
 $header-padding-lg: 30px;
 //: BURGER BUTTON                                                           ://
-$burgerBtn-size-xs: 30px;
-$burgerBtn-size-md: 40px;
-$burgerBtn-size-lg: 60px;
+$burgerBtn-size-xs: 50px;
+$burgerBtn-size-md: 60px;
+$burgerBtn-size-lg: 70px;
+$burgerBtn-padding-xs: 15px;
+$burgerBtn-padding-md: 17px;
+$burgerBtn-padding-lg: 20px;
 
 
 
