--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'header.scss';
 @import 'navigation.scss';
 @import 'landing.scss';
+@import 'counter.scss';
 @import 'archive.scss';
 @import 'stats.scss';
 @import 'settings.scss';
