feat(controls): add controls panels with buttons and media queries

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,8 +11,10 @@
 @import 'overall.scss';
 @import 'header.scss';
 @import 'navigation.scss';
-@import 'landing.scss';
+@import 'app.scss';
 @import 'counter.scss';
+@import 'controls.scss';
+
 @import 'archive.scss';
 @import 'stats.scss';
 @import 'settings.scss';
