--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -22,6 +22,9 @@ $logo-aspect-ratio: 512 / 135;
 $header-padding-xs: 10px;
 $header-padding-md: 20px;
 $header-padding-lg: 30px;
+$header-buttonsGap-xs: 5px;
+$header-buttonsGap-md: 10px;
+$header-buttonsGap-lg: 15px;
 //: BURGER BUTTON                                                           ://
 $burgerBtn-size-xs: 50px;
 $burgerBtn-size-md: 60px;
