feat: add temporary emoji icon

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@
 @import 'app.scss';
 @import 'counter.scss';
 @import 'controls.scss';
+@import 'emoji.scss';
 
 @import 'archive.scss';
 @import 'stats.scss';
