--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -19,12 +19,12 @@ $media-lg: 1024px;
 $logo-aspect-ratio: 512 / 135;
 
 //: PAGE HEADER                                                             ://
-$header-padding-xs: 10px;
-$header-padding-md: 20px;
-$header-padding-lg: 30px;
-$header-buttonsGap-xs: 5px;
-$header-buttonsGap-md: 10px;
-$header-buttonsGap-lg: 15px;
+$header-padding-xs: 15px;
+$header-padding-md: 25px;
+$header-padding-lg: 35px;
+$controls-gap-xs: 10px;
+$controls-gap-md: 15px;
+$controls-gap-lg: 20px;
 //: BURGER BUTTON                                                           ://
 $burgerBtn-size-xs: 50px;
 $burgerBtn-size-md: 60px;
