--- a/app/styles/controls.scss
+++ b/app/styles/controls.scss
@@ -3,12 +3,11 @@
 
 .controls {
   display: grid;
-  padding: $header-buttonsGap-xs;
-  padding-right: $header-padding-xs;
+  padding: $header-padding-xs;
   position: fixed;
   right: 0;
-  row-gap: $header-buttonsGap-xs * 2;
-  top: $burgerBtn-size-xs + $header-padding-xs + $header-buttonsGap-xs;
+  row-gap: $controls-gap-xs;
+  top: $burgerBtn-size-xs + ($header-padding-xs * 2);
   
   border: 1px solid #000;
 
@@ -26,10 +25,9 @@
   @media only screen and (min-width: $media-md) {
 
     & {
-      padding: $header-buttonsGap-md;
-      padding-right: $header-padding-md;
-      row-gap: $header-buttonsGap-md * 2;
-      top: $burgerBtn-size-md + $header-padding-md + $header-buttonsGap-md;
+      padding: $header-padding-md;
+      row-gap: $controls-gap-md;
+      top: $burgerBtn-size-md + ($header-padding-md * 2);
     
       &__button {
         width: $burgerBtn-size-md;
@@ -40,10 +38,9 @@
   @media only screen and (min-width: $media-lg) {
 
     & {
-      padding: $header-buttonsGap-lg;
-      padding-right: $header-padding-lg;
-      row-gap: $header-buttonsGap-lg * 2;
-      top: $burgerBtn-size-lg + $header-padding-lg + $header-buttonsGap-lg;
+      padding: $header-padding-lg;
+      row-gap: $controls-gap-lg;
+      top: $burgerBtn-size-lg + ($header-padding-lg * 2);
     
       &__button {
         width: $burgerBtn-size-lg;
