--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,15 +1,15 @@
 //| COLORS                                                                  |//
+//: BLUE                                                                    ://
 $cold-darkest-blue: #112f44;
 $cold-dark-blue: #274c66;
 $cold-blue: #4a8eb2;
 $cold-light-blue: #d3f3ff;
-
+//: WARM                                                                    ://
 $warm-red: #aa494c;
 $warm-dark-orange: #ba6353;
 $warm-orange: #d68960;
 $warm-light-orange: #e2b673;
 $warm-yellow: #edcf84;
-
 //| MEDIA                                                                   |//
 $media-sm: 360px;
 $media-md: 768px;
@@ -17,7 +17,6 @@ $media-lg: 1024px;
 //| LAYOUT                                                                  |//
 //: LOGO                                                                    ://
 $logo-aspect-ratio: 512 / 135;
-
 //: PAGE HEADER                                                             ://
 $header-padding-xs: 15px;
 $header-padding-md: 25px;
@@ -32,6 +31,9 @@ $burgerBtn-size-lg: 70px;
 $burgerBtn-padding-xs: 15px;
 $burgerBtn-padding-md: 17px;
 $burgerBtn-padding-lg: 20px;
+
+
+
 
 
 
