--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,12 +3,8 @@
 
 //| MAIN APP INTERFACE                                                      |//
 .app {
-  @include flex-center;
   background-color: $cold-dark-blue;
-  height: 100%;
-  min-height: 100vh;
-  width: 100%;
-  //: PAGE HEADER                                                           ://
+  //: APP HEADER                                                            ://
   &__header {
     align-items: center;
     display: flex;
@@ -28,5 +24,12 @@
       padding: $header-padding-lg;
   
     }
+  }
+  //: APP CONTAINER                                                         ://
+  &__container {
+    @include flex-center;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
   }
 }
