--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,9 @@
 //| MAIN APP INTERFACE                                                      |//
 .app {
   background-color: $cold-dark-blue;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
   //: APP HEADER                                                            ://
   &__header {
     align-items: center;
@@ -28,8 +31,10 @@
   //: APP CONTAINER                                                         ://
   &__container {
     @include flex-center;
-    height: 100%;
-    min-height: 100vh;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    top: $header-padding-xs * 2 + $burgerBtn-size-xs;
     width: 100%;
   }
 }
