--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,5 @@
 @import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:400,500,600,700&display=swap');
 
 @import 'normalize.scss';
 @import 'helpers.scss';
@@ -15,6 +15,7 @@
 @import 'counter.scss';
 @import 'controls.scss';
 @import 'emoji.scss';
+@import 'water.scss';
 
 @import 'archive.scss';
 @import 'stats.scss';
