--- a/app/styles/overall.scss
+++ b/app/styles/overall.scss
@@ -23,6 +23,6 @@ html {
 body {
   background: #fafafa;
   color: $cold-light-blue;
-  font-family: "Nunito", Arial, sans-serif;
+  font-family: 'Comfortaa', Arial, sans-serif;
   font-weight: medium;
 }
